@@ -1,3 +1,9 @@
+2008-07-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvbchecks.py:
+	* flumotion/component/dvb/wizard_gtk.py:
+	Make country and antenna for dvb-t more friendly looking.
+
 2008-07-24  Johan Dahlin  <johan@gnome.org>
 
 	* flumotion/component/dvb/wizard_gtk.py:
